--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ p {
 }
 .l-heading {
   font-size: 40px;
+  line-height: 1.2;
 }
 
 /* Padding */
@@ -82,7 +83,7 @@ p {
 #navbar a {
   color: #fff;
 }
-#navbar h1{
+#navbar .logo{
   float:left;
   padding-top: 20px;
 }
@@ -122,7 +123,7 @@ p {
   line-height: 1.7em;
 }
 #home-info{
-  height:400px;
+  height:450px;
 }
 #home-info .info-img {
   float: left;
@@ -175,9 +176,9 @@ p {
 }
 /* Testimonials */
 #testimonials {
-  height:600px;
+  height:100%;
   background: url('../img/test-bg.jpg') no-repeat center center/cover;
-  padding: 100px;
+  padding-top: 100px;
 }
 #testimonials .testimonial {
   padding: 20px;
